k8s-resources/bar-app/bar-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bar-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bar-app
  template:
    metadata:
      labels:
        app: bar-app
    spec:
      containers:
      - name: bar-app
        image: leodomeneghetti/bar-app:v1.0.0
        ports:
        - containerPort: 5000
