k8s-resources/bar-app/bar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-app-service
  namespace: goodnotes-takehome
spec:
  type: ExternalName
  externalName: bar.localhost
  ports:
  - name: bar-port
    port: 8083
    targetPort: 5000
  selector:
    app: bar-app
    namespace: goodnotes-takehome
    tier: backend
