k8s-resources/bar-app/bar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar-app-ingress
spec:
  rules:
  - host: bar.localhost
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: bar-app-service
            port:
              number: 8083
